--- a/app/src/main/res/layout/layout_second_screen.xml
+++ b/app/src/main/res/layout/layout_second_screen.xml
@@ -10,7 +10,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <EditText
+            android:id="@+id/et"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="100dp" />
+
         <Button
+            android:layout_gravity="center"
             android:id="@+id/btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
