--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,4 +2,13 @@
 <resources>
 
     <style name="Theme.Presentation" parent="android:Theme.Material.Light.NoActionBar" />
+
+    <style name="Theme.Presentation.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.Presentation.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.Presentation.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
