--- a/app/src/main/res/layout/activity_keyboard.xml
+++ b/app/src/main/res/layout/activity_keyboard.xml
@@ -19,4 +19,10 @@
         android:shadowColor="#FFFFFF"
         android:shadowRadius="16" />
 
+    <androidx.camera.view.PreviewView
+        android:id="@+id/preview_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
